--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
@@ -161,7 +161,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnalyticPrimitives.hlsli" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="DirectXRaytracingHelper.h" />
+    <ClInclude Include="ObjFile.h" />
+    <ClInclude Include="PlyFile.h" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Quadric.h" />
     <ClInclude Include="Solvers.h">
@@ -185,8 +188,11 @@
     <ClInclude Include="VolumetricPrimitives.hlsli" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="D3D12RaytracingProceduralGeometry.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ObjFile.cpp" />
+    <ClCompile Include="PlyFile.cpp" />
     <ClCompile Include="Primitive.cpp" />
     <ClCompile Include="Quadric.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -213,8 +219,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="readme.md" />
+    <None Include="PathTracing.hlsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
