--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
@@ -90,13 +90,13 @@
     <ClInclude Include="Quadric.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ObjFile.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlyFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tiny_obj_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -126,9 +126,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="D3D12RaytracingProceduralGeometry.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
