--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
@@ -160,12 +160,17 @@
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AccelerationStructure.h" />
     <ClInclude Include="AnalyticPrimitives.hlsli" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="DescriptorHeap.h" />
     <ClInclude Include="DirectXRaytracingHelper.h" />
+    <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Pipeline.h" />
     <ClInclude Include="PlyFile.h" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Quadric.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="Solvers.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
@@ -188,12 +193,17 @@
     <ClInclude Include="VolumetricPrimitives.hlsli" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AccelerationStructure.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="D3D12RaytracingProceduralGeometry.cpp" />
+    <ClCompile Include="DescriptorHeap.cpp" />
+    <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="PlyFile.cpp" />
     <ClCompile Include="Primitive.cpp" />
     <ClCompile Include="Quadric.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
