--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
@@ -178,7 +178,7 @@
     <ClInclude Include="RaytracingSceneDefines.h" />
     <ClInclude Include="RaytracingHlslCompat.h" />
     <ClInclude Include="RaytracingShaderHelper.hlsli" />
-    <ClInclude Include="D3D12RaytracingProceduralGeometry.h" />
+    <ClInclude Include="Application.h" />
     <ClInclude Include="SignedDistanceFractals.hlsli" />
     <ClInclude Include="SignedDistancePrimitives.hlsli" />
     <ClInclude Include="stdafx.h" />
@@ -195,7 +195,7 @@
   <ItemGroup>
     <ClCompile Include="AccelerationStructure.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="D3D12RaytracingProceduralGeometry.cpp" />
+    <ClCompile Include="Application.cpp" />
     <ClCompile Include="DescriptorHeap.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Main.cpp" />
