Sketch of CSG general implementation

--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
@@ -192,5 +192,8 @@
     <None Include="Rasterisation.hlsli">
       <Filter>Assets\Shaders\Rasterisation</Filter>
     </None>
+    <None Include="ConstructiveSolidGeometry.hlsli">
+      <Filter>Assets\Shaders\ProceduralPrimitives</Filter>
+    </None>
   </ItemGroup>
 </Project>
