--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj
@@ -52,6 +52,7 @@
     </PreLinkEventUseInBuild>
     <PreBuildEventUseInBuild>
     </PreBuildEventUseInBuild>
+    <LibraryPath>C:\Users\endev\Documents\Honours\DirectX-Graphics-Samples-master\DirectX-Graphics-Samples-master\Samples\Desktop\D3D12Raytracing\src\Libraries;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -80,7 +81,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dxcompiler.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>DirectXTex.lib;dxcompiler.lib;d3dcompiler.lib;d3d12.lib;dxgi.lib;dxguid.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <DelayLoadDLLs>d3d12.dll</DelayLoadDLLs>
     </Link>
     <CustomBuildStep>
@@ -163,8 +164,10 @@
     <ClInclude Include="AccelerationStructure.h" />
     <ClInclude Include="AnalyticPrimitives.hlsli" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ConstructiveSolidGeometry.h" />
     <ClInclude Include="DescriptorHeap.h" />
     <ClInclude Include="DirectXRaytracingHelper.h" />
+    <ClInclude Include="DirectXTex.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="PlyFile.h" />
@@ -196,6 +199,7 @@
     <ClCompile Include="AccelerationStructure.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="ConstructiveSolidGeometry.cpp" />
     <ClCompile Include="DescriptorHeap.cpp" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -214,6 +218,12 @@
     <ClCompile Include="util\Win32Application.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Ray-Lines.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">4.0</ShaderModel>
+    </FxCompile>
     <FxCompile Include="RayPixel.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
@@ -244,6 +254,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ConstructiveSolidGeometry.hlsli" />
+    <None Include="DirectXTex.inl" />
     <None Include="PathTracing.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
