Fixed race condition on render-target - at expense of performance for now

--- a/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
+++ b/D3D12RaytracingProceduralGeometry/D3D12RaytracingProceduralGeometry.vcxproj.filters
@@ -200,6 +200,9 @@
     <FxCompile Include="shaders.hlsl">
       <Filter>Assets\Shaders\Rasterisation</Filter>
     </FxCompile>
+    <FxCompile Include="StageLightVertices.hlsl">
+      <Filter>Assets\Shaders\Util</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="PathTracing.hlsl">
